<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/croissant_one"
        android:shadowColor="#323232"
        android:shadowDx="0.8"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/text_quiz"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="401dp"
        android:layout_height="220dp"
        android:layout_marginTop="72dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/text_card_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="More Fonts..."
            android:text=""
            android:textIsSelectable="true"
            android:textAlignment="center"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_true"
        android:layout_width="197dp"
        android:layout_height="152dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="4dp"
        android:textSize="26sp"
        app:backgroundTint="@color/answer_button"
        android:text="@string/btn_true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btn_false"
        android:layout_width="197dp"
        android:layout_height="152dp"
        android:layout_marginTop="36dp"
        android:textSize="26sp"
        app:backgroundTint="@color/answer_button"
        android:text="@string/btn_false"
        app:layout_constraintEnd_toStartOf="@+id/btn_true"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="197dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/black"
        app:backgroundTint="#FFF"
        android:text="@string/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_true" />

    <Button
        android:id="@+id/btn_prev"
        android:layout_width="197dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:textColor="@color/black"
        app:backgroundTint="#FFF"
        android:text="@string/btn_previous"
        app:layout_constraintEnd_toStartOf="@+id/btn_next"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_false" />

    <TextView
        android:id="@+id/text_question_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:shadowColor="#323232"
        android:shadowDx="0.2"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/text_question_counter"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_highest_score" />

    <TextView
        android:id="@+id/text_correct_answers"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginEnd="296dp"
        android:shadowColor="#323232"
        android:shadowDx="0.2"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/text_correct"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_highest_score" />

    <TextView
        android:id="@+id/text_highest_score"
        android:layout_width="162dp"
        android:layout_height="27dp"
        android:shadowColor="#323232"
        android:shadowDx="0.2"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:textAlignment="center"
        android:text="@string/highest_score"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.177" />
</androidx.constraintlayout.widget.ConstraintLayout>